Decreased padding to absolute buttons to prevent text being hidden by them

--- a/main.css
+++ b/main.css
@@ -443,7 +443,7 @@ body {
     outline: none;
     cursor: pointer;
     margin: 5px 0px;
-    padding: 8px;
+    padding: 5px;
     border-radius: 50px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.6);
     background-color: rgb(255, 241, 214);
